--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,11 @@ body {
 }
 
 header {
+    display: grid;
+    grid-template-rows: 1fr;
     padding: 20px;
     background-color: #4CAF50;
     color: white;
-
 }
 
 header h1 {
@@ -68,7 +69,11 @@ header h1 {
     border-radius: 50%;
     margin-bottom: 10px;
 }
-
+.card-img:hover {
+    scale: 1.1;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
 .card h2 {
     font-size: 18px;
     color: #333;
@@ -85,11 +90,6 @@ header h1 {
     font-size: 14px;
     color: #555;
     margin-bottom: 15px;
-}
-
-.card-links {
-    display: flex;
-    justify-content: space-around;
 }
 
 .btn {
